fix not align in product

--- a/frontend/app/assets/stylesheets/spree/frontend/product/product.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/product/product.scss
@@ -97,6 +97,7 @@
     }
   }
   .property-value{
+    margin-left: 4px;
     color: #444444;
   }
 }
@@ -109,7 +110,6 @@
   }
   .variant-option-values{
     margin-bottom: 0px !important;
-    margin-left: -8px !important;
     li{
       padding-left: 0px;
       padding-right: 10px;
